--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
 
     <div class="container">
-      <div class="row">
-        <div class="image_box col-12"><img id="main_image" src="images/image1.jpg" class="img-fluid" alt=""></div>
+      <div class="row justify-content-center">
+        <div class="image_box col-6"><img id="main_image" src="images/image1.jpg" class="img-fluid" alt=""></div>
       </div>
 
-      <nav class="row align-items-center" id="thumbnails"></nav>
+      <nav class="row align-items-center mt-3" id="thumbnails"></nav>
 
       <div class="toolbar d-flex justify-content-center">
         <nav class="nav">
